<resources>
    <string name="app_name">Forsa</string>
    <string name="apply">Apply</string>
    <string name="paymentmodel">paymentmodel</string>
    <string name="close">close</string>
    <string name="submitcart">submitcart</string>
    <string name="app_record">Record Video</string>
    <string name="record">Record</string>
    <string name="membersince">Member since </string>
    <string name="welcomeback">Welcome</string>
    <string name="linkresetsendto">A link to reset your password has been sent to</string>
    <string name="dontreceiveaemailyet">Did\'t receive reset link?</string>
    <string name="resendemail">Resend Email</string>
    <string name="countrynotselected">Country Not Selected</string>
    <string name="country">Country</string>
    <string name="languagenotselected">Language Not Selected</string>
    <string name="signintocontinue">Sign in to continue</string>
    <string name="recoverpasssword">Recover Password</string>
    <string name="signupnow">Sign up now!</string>
    <string name="signupfacebook">Sign up with Facebook</string>
    <string name="signupgoogle">Sign up with Google</string>
    <string name="header_login">Sign in now!</string>
    <string name="header_signup">Sign up now!</string>
    <string name="emailaddress">Email address</string>
    <string name="signupwithphone">Sign up with Phone</string>
    <string name="signupwithemail">Sign up with Email</string>
    <string name="signinwithphone">Sign in with Phone</string>
    <string name="signinwithfacebook">Sign in with Facebook</string>
    <string name="signupwithfacebook">Sign up with Facebook</string>
    <string name="signupwithgoogle">Sign up with Google</string>
    <string name="emailidunerline">naura@gmail.com</string>
    <string name="signinwithgoogle">Sign in with Google</string>
    <string name="signinwithemail">Sign in with Email</string>
    <string name="donthaveaccount">Don\'t have an account ? </string>
    <string name="guestlogin">Guest Login</string>
    <string name="guest">Guest</string>
    <string name="home_bm">Home</string>
    <string name="category_bm">Category</string>
    <string name="upload_bm">Upload</string>
    <string name="boost_bm">Boost</string>
    <string name="profile_bm">Profile</string>
    <string name="iagreeto">I agree to</string>
    <string name="keepmealwayssignedin">Keep it always Signed In</string>
    <string name="terms"><b> <u>terms </u></b></string>
    <string name="and">and</string>
    <string name="conditionandpolicy">conditions &amp; policy</string>
    <string name="productdetails">Product Details</string>
    <string name="productname">Product Name</string>
    <string name="signuptocontinue">Sign up to continue</string>
    <string name="verificationcode">Verification Code</string>
    <string name="name">Name</string>
    <string name="phonenumber">Phone number</string>
    <string name="gender">Gender</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="iagreetotermand">I agree to terms and conditions &amp; policy </string>
    <string name="alreadyhaveaccount">Already have an account?</string>
    <string name="ifyoudontreceive">If you didn\'t receive the verify code!</string>
    <string name="resendotp">Resend OTP?</string>
    <string name="otphasenttoyou">OTP have sent on your mobile number<b>+ 965-555-5153-367</b>. Please verify</string>
    <string name="chooseyourlanguage">Choose your language</string>
    <string name="chooseyourcountry">Choose your Country</string>
    <string name="currentlocation">Current Location</string>
    <string name="enablelocationservice">Enable Location Service</string>
    <string name="personalisation">Personalisation</string>
    <string name="skip">Skip</string>
    <string name="mosttrending">Fast Moving Products</string>
    <string name="uploadnewitem">Upload New Item</string>
    <string name="all">All</string>
    <string name="fashion">Fashion</string>
    <string name="homedecor">Home Decor</string>
    <string name="uploadswapenjoy">Upload - Swap - Enjoy!</string>
    <string name="letsstart">Lets Start</string>
    <string name="meetnewpeople">Meet New People</string>
    <string name="swapanycombination">Swap any combination &amp;</string>
    <string name="mobileNo_one">OTP have sent on your mobile number</string>
    <string name="mobileNo_two">. Please verify</string>
    <string name="home">Home Decor</string>
    <string name="category">Home Decor</string>
    <string name="upload">Upload</string>
    <string name="boost">Home Decor</string>
    <string name="profile">Home Decor</string>
    <string-array name="nav_drawer_labels">

        <item>@string/nav_item_one</item>
        <item>@string/nav_item_two</item>
        <item>@string/nav_item_three</item>
    </string-array>
    <string name="nav_item_one">Privacy Policy</string>
    <string name="nav_item_two">Terms and Condition</string>
    <string name="nav_item_three">About Forsa</string>
    <string name="billnow">billnow</string>
    <string name="dashboard">Dashboard</string>
    <string name="addschedule">Add Schedule</string>
    <string name="customermanagemtn">Customer Management</string>
    <string name="locationmanagement">Location Management</string>
    <string name="personelmanagemtn">Personal Management</string>
    <string name="inventorylmanagemtn">Inventory Management</string>
    <string name="appedit">APP Edit</string>
    <string name="websiteedit">Website Edit</string>
    <string name="scheduler">Scheduler</string>
    <string name="doller">$</string>
    <string name="edit">edit</string>
    <string name="edibtn">Edit</string>
    <string name="edititem">Edit Item</string>
    <string name="edibtn_underline"><u>Edit</u></string>
    <string name="delete_underline"><u>Delete</u></string>
    <string name="profile_title">Profile</string>
    <string name="housefaltcannotbenull">House / Flat / Block No cannot be empty</string>
    <string name="addresscannotbenull">Address cannot be empty</string>
    <string name="Houseandflatshouldcontain_digit">House/Flate no should contain digits only</string>
    <string name="landmarkcannotbenull">Landmark cannot be empty</string>
    <string name="citycannotbenull">City cannot be empty</string>
    <string name="stateprovincecannotbenull">State, Province or Religion cannot be empty</string>
    <string name="ziporpostalcannotbenull">Zip or Postal Code cannot be empty</string>
    <string name="countrycannotbenull">Country cannot be empty</string>
    <string name="staus">Status : .</string>
    <string name="selectoneservice">Select Atleast One Service</string>
    <string name="selecttimeslot">Select Time Slot</string>
    <string name="active">Active</string>
    <string name="boostad">Boost Ad</string>
    <string name="disable">In Active </string>
    <string name="reports">Reports</string>
    <string name="accountandsettings">Account &amp; Setting</string>
    <string name="marketing">Marketing</string>
    <string name="possetup">Point of sale</string>
    <string name="createpersionalaccouint">Create Personal Account With Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="pleaseentercomment">Please enter comment</string>
    <string name="donehaveproductforbuy">Don\'t have product for buy</string>
    <string name="enteryouremail">Enter Your Email</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enterconfirmpassword">Enter Confirm Password</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="recordsnotfound">Records Not Found</string>
    <string name="signup_two">Sign Up</string>
    <string name="chooseyourusername">Choose Your Username</string>
    <string name="url">http//www.fitzlepop.com</string>
    <string name="username">Username</string>
    <string name="account">Account</string>
    <string name="selectbookingdateandtime">Select Booking Date &amp; Time</string>
    <string name="selectcustomer">Select Customer</string>
    <string name="next">Next</string>
    <string name="savepassword">Save Password</string>
    <string name="savedetails">Save Details</string>
    <string name="okthanks">OK,Thanks</string>
    <string name="updatepassword">Update Password</string>
    <string name="setup">Set Up</string>
    <string name="or">Or</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="loginwithemail">Login With Email</string>
    <string name="loginyouremail">Enter Your Email</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="logininusingmobileno">Log in using mobile number</string>
    <string name="forget_password_title">Forgot Password</string>
    <string name="login">Login</string>
    <string name="accept">Accept</string>
    <string name="notnow">Not Now</string>
    <string name="friends">Friends</string>
    <string name="friend">Friend</string>
    <string name="view">View</string>
    <string name="viewnow">View Now</string>
    <string name="requests">Requests</string>
    <string name="find">Find</string>
    <string name="befriend">Befriend</string>
    <string name="requested">Requested</string>
    <string name="invitefriend">+ INVITE FRIENDS</string>
    <string name="choosedate">Choose Date</string>
    <string name="notifications">Notifications</string>
    <string name="selectlanguage">Select Language</string>
    <string name="getintuch">Get In Touch</string>
    <string name="message">Message</string>
    <string name="firstline_one">- Allow user to upload upto </string>
    <string name="firstline_two">photos in one ad</string>
    <string name="secondline_one">- Also can upload </string>
    <string name="secondline_two">video</string>
    <string name="thirdline_one">- Also can upload </string>
    <string name="thirdline_two">Ads</string>
    <string name="forthline_one">- Visibility of ad</string>
    <string name="forthline_two">months</string>
    <string name="productdescription">Product Description</string>
    <string name="text">- Drone Dji Pro \n- One year old, Rarely used</string>
    <string name="sellerdetail">Seller Details</string>
    <string name="dealoption">Deal Option</string>
    <string name="trade">Trade</string>
    <string name="bartering">Bartering</string>
    <string name="chooseyourooffer">Choose your offer to bartering</string>
    <string name="startchatting">Start Chatting</string>
    <string name="adid">Ad Id : </string>
    <string name="reportad">Report Ad</string>
    <string name="similarproducts">Similar Products</string>
    <string name="wishlistitems">Wishlist Items</string>
    <string name="switchcamera">Switch</string>
    <string name="viewallproducts"><u>View All Products</u></string>
    <string name="reviews">Reviews</string>
    <string name="request_cancelled">Request Cancelled</string>
    <string name="startbartering">Start Bartering</string>
    <string name="price_dot_text">Price :</string>
    <string name="myads_menu">My Ads</string>
    <string name="kwd">KWD</string>
    <string name="editprofile">Edit Profile</string>
    <string name="changepassword">Change Password</string>
    <string name="currentpasswordcannotbeempty">Current Password must require</string>
    <string name="newpasswordcannotbeempty">New Password must require</string>
    <string name="confirmpasswordcannotbeempty">Confirm Password must require</string>
    <string name="totalcart">Total Cart</string>
    <string name="transaction_detail">Transaction details</string>
    <string name="trading_detail">Trading detail</string>
    <string name="bartering_detail">Bartering detail</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcometext">Welcome</string>
</resources>