<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:layout_width="@dimen/backarrow_width"
        android:layout_height="@dimen/backarrow_height"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginTop="@dimen/size_30"
        android:background="@mipmap/right_arrow"
        android:onClick="backPressed"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_60"
            android:gravity="center"
            android:text="@string/recoverpasssword"
            android:textColor="@color/black"
            android:textSize="@dimen/size_30"
            android:textStyle="bold"></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/size_30"
            android:background="@drawable/border_shadow_select"
            android:hint="@string/new_password"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/size_10"
            android:singleLine="true"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"></EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/size_20"
            android:background="@drawable/border_shadow_select"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/size_10"
            android:singleLine="true"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"></EditText>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/size_30"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:onClick="otpVerification"
            android:text="@string/savepassword"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/size_30"
            android:textSize="@dimen/buttontextsize"></TextView>

    </LinearLayout>

</LinearLayout>